--- a/src/components/color-palette/color-sample/color-sample.pug
+++ b/src/components/color-palette/color-sample/color-sample.pug
@@ -1,6 +1,6 @@
 mixin color-sample(props)
   .color-sample
-    .color-sample__color(style={"background-color": props.color})
+    .color-sample__color(style={"background-color": props.colorValue})
     .color-sample__info
       span.color-sample__title= props.title
-      span.color-sample__value= props.color
+      span.color-sample__value= props.colorName.toUpperCase()
