--- a/src/components/color-palette/color-sample/color-sample.scss
+++ b/src/components/color-palette/color-sample/color-sample.scss
@@ -1,3 +1,5 @@
+@import "@styles/colors.scss";
+
 .color-sample {
   max-width: 320px;
   display: flex;
@@ -15,6 +17,10 @@
     flex-flow: column wrap;
     justify-items: center;
     margin-left: 40px;
+
+    @media screen and (max-width: 350px) {
+      margin-left: 20px;
+    }
   }
 
   &__title,
