--- a/src/pages/ui-kit/color-palette/color-palette.scss
+++ b/src/pages/ui-kit/color-palette/color-palette.scss
@@ -1,7 +1,8 @@
 @import "./color-sample/color-sample.scss";
 
 .color-palette {
-  padding: 1rem;
+  flex-basis: 50%;
+  min-width: 280px;
 
   &__item {
     margin-bottom: 20px;
