Adjust layout for UI Kit pages

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -1,6 +1,9 @@
 .page
-  include ./color-palette/color-palette.pug
-  include ./text-samples/text-samples.pug
+  section.uikit-section
+    include ./color-palette/color-palette.pug
+  section.uikit-section
+    include ./text-samples/text-samples.pug
 
 .page
-  include ./form-elements/form-elements.pug
+  section.uikit-section
+    include ./form-elements/form-elements.pug
