--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -1,3 +1,7 @@
 @import "./color-palette/color-palette.scss";
 @import "./text-samples/text-samples.scss";
 @import "./form-elements/form-elements.scss";
+
+.uikit-section {
+  margin: 4rem 1rem;
+}
