--- a/src/pages/ui-kit/text-samples/text-samples.scss
+++ b/src/pages/ui-kit/text-samples/text-samples.scss
@@ -1,7 +1,6 @@
 @import "@styles/colors.scss";
 
 .text-samples {
-  flex-basis: 50%;
   min-width: 280px;
 }
 
@@ -25,5 +24,5 @@
 }
 
 .text-sample__value {
-  width: 330px;
+  width: 100%;
 }
