Create base for dropdown component

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,7 @@
 extends layout.pug
 //- Include mixins here
 include components/input/input.pug
+include components/dropdown/dropdown.pug
 block header
 block content
   include pages/ui-kit/ui-kit.pug
