--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -35,10 +35,18 @@
     border-radius: 4px;
     padding-left: 15px;
 
+    @media screen and (max-width: 350px) {
+      width: 280px;
+    }
+
     &::placeholder {
       font-family: Montserrat;
       font-size: 14px;
       color: $dark25;
+    }
+
+    &:hover, &:focus {
+      border-color: $dark50;
     }
   }
 }
