--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -1,2 +1,2 @@
 +input({type: "email", id: "email", placeholder: "Email", title: "Text field", description: "default"})
-+dropdown({title: "Dropdown", select: "Сколько гостей", options: [{name: "взрослые", value: 0}, {name: "дети", value: 0}, {name: "младенцы", value: 0}]})
++dropdown({title: "Dropdown", id: "dropdown-1", select: "Сколько гостей", options: [{name: "взрослые", value: 0}, {name: "дети", value: 0}, {name: "младенцы", value: 0}]})
