--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,20 +1,30 @@
 //- TODO: deal with style dependencies on .input (extract them or something)
 mixin dropdown(props)
+  script.
+    document.addEventListener("DOMContentLoaded", () => {
+      let id = "#{props.id}"
+      let toggle = document.getElementById(id)
+      toggle.addEventListener("click", () => {
+        let content = document.querySelector(`#${id}+.dropdown__content`)
+        content.classList.toggle("hidden")
+      })
+    })
   .input
     label.input__label(for=props.id)
       span.input__title= props.title
       span.input__description= props.description
-    button.dropdown(id=props.id)
-      span.dropdown__select= props.select
-      i.dropdown__icon-expand
-    .dropdown__content
-      each option in props.options
-        .option
-          span.option__name= option.name
-          .option__controls
-            button.increment.increment--disabled -
-            span= option.value
-            button.increment +
-      .dropdown__controls
-        button.dropdown__control.dropdown__control--gray Очистить
-        button.dropdown__control Применить
+    .dropdown-container
+      button.dropdown(id=props.id)
+        span.dropdown__select= props.select
+        i.dropdown__icon-expand
+      .dropdown__content
+        each option in props.options
+          .option
+            span.option__name= option.name
+            .option__controls
+              button.increment.increment--disabled -
+              span= option.value
+              button.increment +
+        .dropdown__controls
+          button.dropdown__control.dropdown__control--gray Очистить
+          button.dropdown__control Применить
