--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,21 +1,37 @@
+.dropdown-container {
+  position: relative;
+  width: 320px;
+}
+
 .dropdown {
   display: flex;
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
 
-  width: 320px;
+  width: 100%;
   height: 44px;
   font-family: Montserrat;
   line-height: 24px;
   font-size: 14px;
   background: #ffffff;
-  // border: 1px solid $dark25;
-  box-sizing: border-box;
-  border: none;
-  // border-radius: 4px;
+
   padding-left: 15px;
   padding-right: 17px;
+  
+  border: 1px solid $dark25;
+  box-sizing: border-box;
+  border-radius: 4px;
+
+  &:focus, &:hover {
+    border-color: $dark50;
+  }
+
+  &--expanded {
+    border-color: $dark50;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
 
   @media screen and (max-width: 350px) {
     width: 280px;
@@ -39,11 +55,17 @@
   }
 
   &__content {
-    // position: absolute;
-    // display: none;
+    position: absolute;
+    top: 44px;
+    width: 100%;
+    box-sizing: border-box;
+
+    background-color: #ffffff;
+
     padding: 4px 5px 5px 14px;
-    // border: 1px solid $dark50;
-    border-top: 2px solid $dark25;
+    border: 1px solid $dark50;
+    border-radius: 0 0 4px 4px;
+    
     font-size: 12px;
     font-weight: bold;
     text-transform: uppercase;
@@ -107,14 +129,3 @@
   }
 }
 
-.dropdown-container {
-  border: 1px solid $dark25;
-  // box-sizing: border-box;
-  border-radius: 4px;
-  overflow: hidden;
-
-  &:hover,
-  &:focus {
-    border-color: $dark50;
-  }
-}
