--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -5,7 +5,7 @@
 
   select: {
     title: "Сколько гостей",
-    wordForms: "гость,гостя,гостей"
+    plural: "гость,гостя,гостей"
   },
   
   options: [
