Add masked input form component

--- a/src/index.pug
+++ b/src/index.pug
@@ -2,6 +2,7 @@ extends layout.pug
 //- Include mixins here
 include components/input/input.pug
 include components/dropdown/dropdown.pug
+include components/masked-input/masked-input.pug
 block header
 block content
   include pages/ui-kit/ui-kit.pug
