--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -1,2 +1,3 @@
 @import "@/components/input/input.scss";
 @import "@/components/dropdown/dropdown.scss";
+@import "@/components/masked-input/masked-input.scss";
