Add date-picker component (first draft)

--- a/src/components/masked-input/masked-input.pug
+++ b/src/components/masked-input/masked-input.pug
@@ -11,4 +11,4 @@ mixin masked-input(props)
         id=props.id,
         class="js-masked-input"
       )
-      span.masked-placeholder(id=`${maskedId}`)= props.placeholder
+      span.masked-input__placeholder(id=`${maskedId}`)= props.placeholder
