--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,7 @@ extends layout.pug
 include components/input/input.pug
 include components/dropdown/dropdown.pug
 include components/masked-input/masked-input.pug
+include components/date-picker/date-picker.pug
 block header
 block content
   include pages/ui-kit/ui-kit.pug
