--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -18,3 +18,5 @@
 //- +input({type: "email", id: "email", placeholder: "Email", title: "Text field", description: "default"})
 
 +masked-input({type: "text", id: "masked", placeholder: "ДД.ММ.ГГГГ", title: "Masked text field", description: "default"})
+
++date-picker({})
