--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -1,3 +1,4 @@
 @import "@/components/input/input.scss";
 @import "@/components/dropdown/dropdown.scss";
 @import "@/components/masked-input/masked-input.scss";
+@import "@/components/date-picker/date-picker.scss";
