Add CSS arrows for date-picker

--- a/src/components/date-picker/date-picker.pug
+++ b/src/components/date-picker/date-picker.pug
@@ -7,7 +7,7 @@ mixin date-picker(props)
     header.date-picker__header
       .arrow-left
       span.date-picker__heading Апрель 2019
-      .arrow-left.arrow-left--mirror
+      .arrow-right
     .date-grid
       header.date-grid__header
         each day in weekdays
