--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,3 +1,5 @@
+include ../common/save-controls/save-controls.pug
+
 mixin option(props, parentId)
   .option
     span.option__name= props.name
@@ -23,6 +25,10 @@ mixin dropdown(props)
       .dropdown__content.hidden
         each item in props.options
           +option(item, props.id)
-        .dropdown__controls
-          button.dropdown__control.dropdown__control--gray.invisible Очистить
-          button.dropdown__control Применить
+        +save-controls({
+          classNames: {
+            container: "dropdown__controls",
+            clear: "dropdown__control",
+            apply: "dropdown__control"
+          }
+        })
