--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,3 +1,5 @@
+@import "../common/save-controls/save-controls.scss";
+
 .dropdown-container {
   position: relative;
   width: 320px;
@@ -70,28 +72,6 @@
     font-size: 12px;
     font-weight: bold;
     text-transform: uppercase;
-  }
-
-  &__controls {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 30px;
-    padding-top: 6px;
-  }
-
-  &__control {
-    border: none;
-    background-color: white;
-    padding: 0;
-    color: $purple;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 12px;
-
-    &--gray {
-      color: $dark50;
-    }
   }
 }
 
