--- a/src/components/common/save-controls/save-controls.scss
+++ b/src/components/common/save-controls/save-controls.scss
@@ -3,10 +3,12 @@
   justify-content: space-between;
   align-items: center;
   height: 30px;
-  padding-top: 6px;
+  // padding-top: 6px;
+  box-sizing: border-box;
 
   &__apply,
   &__clear {
+    cursor: pointer;
     border: none;
     background-color: white;
     padding: 0;
