--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -5,7 +5,7 @@
   align-items: center;
 
   width: 320px;
-  padding: 20px;
+  padding: 19px 20px 12px;
   box-sizing: border-box;
 
   border: 1px solid $dark25;
@@ -16,7 +16,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 29px;
   }
 
   &__heading {
@@ -26,6 +26,10 @@
     font-size: 19px;
     line-height: 24px;
     color: $dark100;
+  }
+  
+  &__controls {
+    width: 100%;
   }
 }
 
@@ -68,8 +72,9 @@
   transform: rotate(180deg);
 }
 
-.date-grid {
+.days-grid {
   width: 280px;
+  margin-bottom: 13px;
 
   &__header {
     display: flex;
@@ -89,7 +94,6 @@
 
     justify-content: center;
     align-items: center;
-    // padding-right: 15px;
 
     font-family: Montserrat;
     font-style: normal;
