--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -19,6 +19,15 @@
     margin-bottom: 29px;
   }
 
+  &__previous, &__next {
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   &__heading {
     font-family: Quicksand, sans-serif;
     font-style: normal;
@@ -91,6 +100,7 @@
     width: 40px;
     height: 40px;
     box-sizing: border-box;
+    cursor: pointer;
 
     justify-content: center;
     align-items: center;
@@ -116,6 +126,7 @@
     &--range-start, &--range-end {
       position: relative;
       background-image: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+      cursor: pointer;
 
       &::after {
         content: "";
@@ -150,6 +161,7 @@
       padding: 0;
       font-weight: bold;
       color: $purple;
+      cursor: default;
     }
   }
 }
