date-picker: make class names consistent with other components

--- a/src/components/date-picker/date-picker.pug
+++ b/src/components/date-picker/date-picker.pug
@@ -20,8 +20,8 @@ mixin date-picker(props)
 
     +save-controls({
       classNames: {
-        container: "date-picker__controls js-date-picker__controls",
-        clear: "js-date-picker__control",
-        apply: "js-date-picker__control"
+        container: "date-picker__controls date-picker__controls",
+        clear: "date-picker__control",
+        apply: "date-picker__control"
       }
     })
