Small changes / code maintenance

--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -17,11 +17,11 @@ mixin dropdown(props)
       span.input__title= props.title
       span.input__description= props.description
     .dropdown-container
-      //- button.dropdown.dropdown--expanded(id=props.id)
+      //- button.dropdown.dropdown--expanded(id=props.id) //- alternate state
       button.dropdown(id=props.id)
         span.dropdown__select(data-plural=props.select.plural)= props.select.title
         i.dropdown__icon-expand
-      //- .dropdown__content
+      //- .dropdown__content //- alternate state
       .dropdown__content.hidden
         each item in props.options
           +option(item, props.id)
