--- a/src/index.pug
+++ b/src/index.pug
@@ -4,6 +4,8 @@ include components/input/input.pug
 include components/dropdown/dropdown.pug
 include components/masked-input/masked-input.pug
 include components/date-picker/date-picker.pug
+include components/date-dropdown/date-dropdown.pug
+
 block header
 block content
   include pages/ui-kit/ui-kit.pug
