--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -1,5 +1,6 @@
 p
-  +input({type: "email", id: "email", placeholder: "Email", title: "Text field", description: "default"})
+  +input({type: "email", id: "email", placeholder: "Email", title: "Text field"})
+
 p
   +dropdown({
     title: "Dropdown", 
@@ -20,6 +21,7 @@ p
 //- +input({type: "email", id: "email", placeholder: "Email", title: "Text field", description: "default"})
 
 p
-  +masked-input({type: "text", id: "masked", placeholder: "ДД.ММ.ГГГГ", title: "Masked text field", description: "default"})
+  +masked-input({type: "text", id: "masked", placeholder: "ДД.ММ.ГГГГ", title: "Masked text field"})
+
 p
-  +date-picker({})
+  +date-dropdown({id: "date-dropdown-1", placeholder: "ДД.ММ.ГГГГ", title: "Date dropdown"})
