--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -2,3 +2,4 @@
 @import "@/components/dropdown/dropdown.scss";
 @import "@/components/masked-input/masked-input.scss";
 @import "@/components/date-picker/date-picker.scss";
+@import "@/components/date-dropdown/date-dropdown.scss";
